<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/gradient"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:text="welcome to"
                android:textColor="@color/colorPrimary"
                android:textStyle="italic"
                android:textSize="25dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="-5dp"
                android:layout_marginEnd="24dp"
                android:text="Tour Trek"
                android:fontFamily="sans-serif-smallcaps"
                android:textColor="@color/colorAccent"
                android:textStyle="italic"
                android:textSize="65dp"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="100dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_tourist">
            </ImageView>

            <EditText
                android:id="@+id/login_email_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:hint="@string/prompt_email"
                android:textColorHint="@color/colorAccent"
                android:inputType="textEmailAddress"
                android:selectAllOnFocus="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/login_password_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:hint="@string/prompt_password"
                android:textColorHint="@color/colorAccent"
                android:inputType="textPassword"
                android:selectAllOnFocus="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/username" />

            <ProgressBar
                android:id="@+id/login_loading_pb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:layout_gravity="center"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/login_error_tv"
                android:layout_width="283dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:visibility="gone" />

            <Button
                android:id="@+id/login_login_btn"
                android:layout_width="200dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:enabled="true"
                android:background="@drawable/btn_shape_selector_primary"
                android:text="@string/action_sign_in"
                android:textColor="#FFFFFF"/>

            <Button
                android:id="@+id/login_register_btn"
                android:layout_width="200dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:enabled="true"
                android:background="@drawable/btn_shape_selector_primary"
                android:text="@string/action_register"
                android:textColor="#FFFFFF"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>