...
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:weightSum="1.0">
                <Button
                    android:id="@+id/tour_add_attraction_btn"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="24dp"
                    android:layout_marginStart="24dp"
                    android:layout_weight="0.33"
...
                    android:text="Share Tour"
                    android:textAllCaps="false"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold" />
                <!--android:onClick="shareTourFunction"-->
                <Button
                    android:id="@+id/tour_update_btn"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="24dp"
                    android:layout_weight=".33"
                    android:background="@color/colorPrimaryDark"
                    android:enabled="true"
                    android:text="Update Tour"
                    android:textAllCaps="false"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold" />
                <!--android:onClick="updateTourFunction"-->
            </LinearLayout>
        </LinearLayout>
...
